# ResearchOS

./: .gitignore  CLAUDE.md  README.md  README_적용방법.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.agents/: claude_research_model_agent.md
.github/workflows/: python.yml
config/: analysis_plan.example.yaml  research_context.yaml  research_plan.example.yaml  variable_map.example.yaml
src/: 00_프로젝트초기화.py  01_파일변환.py  main.py
src/audit/: __init__.py  research.py
src/auto/: __init__.py  analysis_plan.py  cli.py  multi_outcome.py  overrides.py  pipeline.py  rawdata_loader.py  research_intent.py  runner.py  validation.py  variable_inference.py
src/common/: config_exceptions.py  config_loader.py  config_models.py  config_resolver.py  context_store.py  directories.py  file_metadata.py  file_reader.py  file_writer.py  logger.py  paths.py
src/pipeline/: advanced_robustness_step.py  analysis_steps.py  builder.py  builtin_steps.py  context.py  correlation_step.py  descriptive_step.py  effect_size_step.py  io_steps.py  orchestrator.py  registry.py  regression_builder.py  regression_diagnostics_step.py  regression_reporting_step.py  regression_step.py  regression_visualization_step.py  research_audit_step.py  robustness_step.py  run_pipeline.py  runner.py  runtime.py  stages.py  state.py  step.py
src/planning/: analysis_selector.py  knowledge_base.py
src/preprocess/: cleaner.py  detector.py  evidence_resolver.py  executor.py  missingness.py  outliers.py  planner.py  scales.py
src/reporting/: __init__.py  manuscript.py  regression.py  tables.py
src/review/: proofreading.py  references.py  research_design.py  reviewers.py  statistical.py
tests/: conftest.py  test_advanced_robustness.py  test_advanced_robustness_registration.py  test_analysis_selector.py  test_auto_analysis_plan.py  test_auto_cli.py  test_auto_multi_outcome.py  test_auto_pipeline.py  test_auto_rawdata_loader.py  test_auto_runner.py  test_auto_validation.py  test_auto_variable_inference.py  test_beta_regression.py  test_binary_cloglog.py  test_binary_probit.py  test_boxcox_regression.py  test_candidate_warning_leak.py  test_categorical_detection.py  test_cause_specific_cox.py  test_clustered_cox.py  test_common_io.py  test_config.py  test_config_resolver.py  test_context_store.py  test_correlation.py  test_count_diagnostics.py  test_count_regression.py  test_count_warning_leak.py  test_cox_regression.py  test_cross_level_mixed_effects.py  test_descriptive_quality.py  test_discrete_time_hazard.py  test_dummy_encoding.py  test_effect_size_registration.py  test_effect_sizes.py  test_evidence_resolver.py  test_explicit_count_model_routing.py  test_exponential_aft.py  test_file_metadata.py  test_file_reader.py  (+89 more)
(+113 files in other folders)
